deploy: rkcpn/blog@102990c72cda404328b9af8b2e1673baed237f28

--- a/series/index.html
+++ b/series/index.html
@@ -2,9 +2,10 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
-<title>404 Page not found &#183; </title>
-<meta name=title content="404 Page not found &#183; ">
-<link rel=canonical href=https://nunocoracao.github.io/blowfish/404.html>
+<title>Series &#183; </title>
+<meta name=title content="Series &#183; ">
+<link rel=canonical href=https://nunocoracao.github.io/blowfish/series/>
+<link rel=alternate type=application/rss+xml href=/blowfish/series/index.xml title>
 <link type=text/css rel=stylesheet href=/blowfish/css/main.bundle.min.4ba16554107631ac1b414a49b6227d96775ff29fa0b14037c9cd2cff46d6af9c75ad3f48a8b0ff926d13813267873d650675c803ff8fa624c55f0b0ea873f83d.css integrity="sha512-S6FlVBB2MawbQUpJtiJ9lndf8p+gsUA3yc0s/0bWr5x1rT9IqLD/km0TgTJnhz1lBnXIA/+PpiTFXwsOqHP4PQ==">
 <script type=text/javascript src=/blowfish/js/appearance.min.3508351f0d2322ec03ef8ac4710aedb9fb7aea7d643c74ed34e35458b0fa4de9060522eca162d3de142defab8d9c5ccf9873a25cba9550026d430f0a64326770.js integrity="sha512-NQg1Hw0jIuwD74rEcQrtuft66n1kPHTtNONUWLD6TekGBSLsoWLT3hQt76uNnFzPmHOiXLqVUAJtQw8KZDJncA=="></script>
 <script src=/js/zoom.min.js></script>
@@ -12,12 +13,12 @@
 <link rel=icon type=image/png sizes=32x32 href=/blowfish/favicon-32x32.png>
 <link rel=icon type=image/png sizes=16x16 href=/blowfish/favicon-16x16.png>
 <link rel=manifest href=/blowfish/site.webmanifest>
-<meta property="og:title" content="404 Page not found">
+<meta property="og:title" content="Series">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://nunocoracao.github.io/blowfish/404.html">
+<meta property="og:url" content="https://nunocoracao.github.io/blowfish/series/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="404 Page not found">
+<meta name=twitter:title content="Series">
 <meta name=twitter:description content>
 <script src=/blowfish/lib/jquery/jquery.slim.min.js integrity></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEDMYR1V0K"></script>
@@ -61,13 +62,17 @@
 </div>
 <div class="relative flex flex-col grow">
 <main id=main-content class=grow>
-<h1 class="mb-3 text-4xl font-extrabold">Page Not Found 😕</h1>
-<p class="mt-8 mb-12 text-neutral-400 dark:text-neutral-500">
-Error 404
-</p>
-<div class="prose dark:prose-invert">
-<p>It seems that the page you've requested does not exist.</p>
+<header>
+<h1 class="mt-5 text-4xl font-extrabold text-neutral-900 dark:text-neutral">Series</h1>
+<div class="mt-1 mb-2 text-base text-neutral-500 dark:text-neutral-400 print:hidden">
+<div class="flex flex-row flex-wrap items-center">
 </div>
+</div>
+</header>
+<script>var oid="views_taxonomy_series",oid_likes="likes_taxonomy_series"</script>
+<script type=text/javascript src=/blowfish/js/page.min.e81cc025d61acff630909044f33df3ded3f4b7c917bf3db3ab7bef2ed26c7baf9be84ffedc2c4ee9dff8bbc1f3ad63ccb7d489d7f43e56a00a2b14bdeaaee7e1.js integrity="sha512-6BzAJdYaz/YwkJBE8z3z3tP0t8kXvz2zq3vvLtJse6+b6E/+3CxO6d/4u8HzrWPMt9SJ1/Q+VqAKKxS96q7n4Q=="></script>
+<section class="flex flex-wrap max-w-prose -mx-2 overflow-hidden">
+</section>
 </main><footer class="py-10 print:hidden">
 <div class="flex items-center justify-between">
 <p class="text-sm text-neutral-500 dark:text-neutral-400">
