--- a/index.html
+++ b/index.html
@@ -1,103 +1,95 @@
-<!doctype html><html lang=en dir=auto>
-<head>
-<meta name=generator content="Hugo 0.88.1"><meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=robots content="index, follow">
-<title>rkcpn</title>
-<meta name=keywords content="Blog,Portfolio,Software">
-<meta name=description content="Hello">
-<meta name=author content="Rok">
-<link rel=canonical href=https://rkcpn.github.io/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO+tN6uT1w=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://rkcpn.github.io/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://rkcpn.github.io/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://rkcpn.github.io/favicon-32x32.png>
-<link rel=apple-touch-icon href=https://rkcpn.github.io/apple-touch-icon.png>
-<link rel=mask-icon href=https://rkcpn.github.io/safari-pinned-tab.svg>
-<meta name=theme-color content="#2e2e33">
-<meta name=msapplication-TileColor content="#2e2e33">
-<link rel=alternate type=application/rss+xml href=https://rkcpn.github.io/index.xml>
-<link rel=alternate type=application/json href=https://rkcpn.github.io/index.json>
-<noscript>
-<style>#theme-toggle,.top-link{display:none}</style>
-<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="rkcpn">
-<meta property="og:description" content="Hello">
+<!doctype html><html lang=" en" dir=ltr class=scroll-smooth data-default-appearance=light data-auto-appearance=true><head>
+<meta name=generator content="Hugo 0.88.1">
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<meta http-equiv=x-ua-compatible content="ie=edge">
+<title></title>
+<meta name=title content>
+<link rel=canonical href=https://nunocoracao.github.io/blowfish/>
+<link rel=alternate type=application/rss+xml href=/blowfish/index.xml title>
+<link rel=alternate type=application/json href=/blowfish/index.json title>
+<link type=text/css rel=stylesheet href=/blowfish/css/main.bundle.min.4ba16554107631ac1b414a49b6227d96775ff29fa0b14037c9cd2cff46d6af9c75ad3f48a8b0ff926d13813267873d650675c803ff8fa624c55f0b0ea873f83d.css integrity="sha512-S6FlVBB2MawbQUpJtiJ9lndf8p+gsUA3yc0s/0bWr5x1rT9IqLD/km0TgTJnhz1lBnXIA/+PpiTFXwsOqHP4PQ==">
+<script type=text/javascript src=/blowfish/js/appearance.min.3508351f0d2322ec03ef8ac4710aedb9fb7aea7d643c74ed34e35458b0fa4de9060522eca162d3de142defab8d9c5ccf9873a25cba9550026d430f0a64326770.js integrity="sha512-NQg1Hw0jIuwD74rEcQrtuft66n1kPHTtNONUWLD6TekGBSLsoWLT3hQt76uNnFzPmHOiXLqVUAJtQw8KZDJncA=="></script>
+<script src=/js/zoom.min.js></script>
+<link rel=apple-touch-icon sizes=180x180 href=/blowfish/apple-touch-icon.png>
+<link rel=icon type=image/png sizes=32x32 href=/blowfish/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=/blowfish/favicon-16x16.png>
+<link rel=manifest href=/blowfish/site.webmanifest>
+<meta property="og:title" content>
+<meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://rkcpn.github.io/"><meta property="og:image" content="https://rkcpn.github.io/papermod-cover.png">
-<meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://rkcpn.github.io/papermod-cover.png">
-<meta name=twitter:title content="rkcpn">
-<meta name=twitter:description content="Hello">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"Organization","name":"rkcpn","url":"https://rkcpn.github.io","description":"Hello","thumbnailUrl":"https://rkcpn.github.io/favicon.ico","sameAs":["https://github.com/rkcpn","index.xml"]}</script>
+<meta property="og:url" content="https://nunocoracao.github.io/blowfish/">
+<meta name=twitter:card content="summary">
+<meta name=twitter:title content>
+<meta name=twitter:description content>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"WebSite","@id":"https:\/\/nunocoracao.github.io\/blowfish\/","name":"","url":"https:\/\/nunocoracao.github.io\/blowfish\/","publisher":{"@type":"Person","name":""}}</script>
+<script src=/blowfish/lib/jquery/jquery.slim.min.js integrity></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEDMYR1V0K"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-PEDMYR1V0K',{anonymize_ip:!1})}</script>
+<meta name=theme-color>
 </head>
-<body class=list id=top>
-<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
-<header class=header>
-<nav class=nav>
-<div class=logo>
-<a href=https://rkcpn.github.io accesskey=h title="rkcpn (Alt + H)">rkcpn</a>
-<div class=logo-switches>
-<button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
-</button>
+<body class="flex flex-col h-screen px-6 m-auto text-lg leading-7 max-w-7xl bg-neutral text-neutral-900 dark:bg-neutral-800 dark:text-neutral sm:px-14 md:px-24 lg:px-32">
+<div id=the-top class="absolute flex self-center">
+<a class="px-3 py-1 text-sm -translate-y-8 rounded-b-lg bg-primary-200 focus:translate-y-0 dark:bg-neutral-600" href=#main-content><span class="font-bold text-primary-600 ltr:pr-2 rtl:pl-2 dark:text-primary-400">&darr;</span>Skip to main content</a>
+</div>
+<div style=padding-left:0;padding-right:0;padding-top:2px;padding-bottom:3px class="main-menu flex items-center justify-between px-4 py-6 sm:px-6 md:justify-start space-x-3">
+<div class="flex flex-1 items-center justify-between">
+<nav class="flex space-x-3">
+<a href=/blowfish class="text-base font-medium text-gray-500 hover:text-gray-900"></a>
+</nav>
+<nav class="hidden md:flex items-center space-x-5 md:ml-12">
+</nav>
+<div class="flex md:hidden items-center space-x-5 md:ml-12">
+<span></span>
 </div>
 </div>
-<ul id=menu>
+<div class="-my-2 -mr-2 md:hidden">
+<label id=menu-button for=menu-controller class=block>
+<input type=checkbox id=menu-controller class=hidden>
+<div class="cursor-pointer hover:text-primary-600 dark:hover:text-primary-400">
+<span class="relative block icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentcolor" d="M0 96C0 78.33 14.33 64 32 64H416c17.7.0 32 14.33 32 32 0 17.7-14.3 32-32 32H32C14.33 128 0 113.7.0 96zM0 256c0-17.7 14.33-32 32-32H416c17.7.0 32 14.3 32 32s-14.3 32-32 32H32c-17.67.0-32-14.3-32-32zM416 448H32c-17.67.0-32-14.3-32-32s14.33-32 32-32H416c17.7.0 32 14.3 32 32s-14.3 32-32 32z"/></svg>
+</span>
+</div>
+<div id=menu-wrapper style=padding-top:5px class="fixed inset-0 z-30 invisible w-screen h-screen m-auto overflow-auto transition-opacity opacity-0 cursor-default bg-neutral-100/50 backdrop-blur-sm dark:bg-neutral-900/50">
+<ul class="flex space-y-2 mt-3 flex-col items-end w-full px-6 py-6 mx-auto overflow-visible list-none ltr:text-right rtl:text-left max-w-7xl">
 <li>
-<a href=https://rkcpn.github.io/categories/ title=categories>
-<span>categories</span>
-</a>
-</li>
-<li>
-<a href=https://rkcpn.github.io/tags/ title=tags>
-<span>tags</span>
-</a>
+<span class="cursor-pointer inline-block align-text-bottom hover:text-primary-600 dark:hover:text-primary-400">
+<span class="relative block icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path fill="currentcolor" d="M310.6 361.4c12.5 12.5 12.5 32.75.0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3 54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75.0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75.0-45.25s32.75-12.5 45.25.0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25.0s12.5 32.75.0 45.25l-105.4 105.4L310.6 361.4z"/></svg>
+</span>
+</span>
 </li>
 </ul>
-</nav>
-</header>
-<main class=main>
-<article class="first-entry home-info">
-<header class=entry-header>
-<h1>rkcpn</h1>
-</header>
-<div class=entry-content>
-welcome 🌟
 </div>
-<footer class=entry-footer>
-<div class=social-icons>
-<a href=https://github.com/rkcpn target=_blank rel="noopener noreferrer me" title=Github><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37.0 00-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44.0 0020 4.77 5.07 5.07.0 0019.91 1S18.73.65 16 2.48a13.38 13.38.0 00-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07.0 005 4.77 5.44 5.44.0 003.5 8.55c0 5.42 3.3 6.61 6.44 7A3.37 3.37.0 009 18.13V22"/></svg>
-</a>
-<a href=index.xml target=_blank rel="noopener noreferrer me" title=Rss><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 11a9 9 0 019 9"/><path d="M4 4a16 16 0 0116 16"/><circle cx="5" cy="19" r="1"/></svg>
-</a>
+</label>
 </div>
-</footer>
+</div>
+<div class="relative flex flex-col grow">
+<main id=main-content class=grow>
+<article class="h-full
+flex flex-col items-center justify-center text-center">
+<header class="flex flex-col items-center mb-3">
+<h1 class="text-4xl font-extrabold">
+</h1>
+<div class="mt-1 text-2xl">
+</div>
+</header>
+<section class="prose dark:prose-invert"></section>
 </article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Hello World
-</h2>
-</header>
-<div class=entry-content>
-<p>Hey hey</p>
+<section>
+</section>
+</main><footer class="py-10 print:hidden">
+<div class="flex items-center justify-between">
+<p class="text-sm text-neutral-500 dark:text-neutral-400">
+&copy;
+2023
+</p>
+<p class="text-xs text-neutral-500 dark:text-neutral-400">
+Powered by <a class="hover:underline hover:decoration-primary-400 hover:text-primary-500" href=https://gohugo.io/ target=_blank rel="noopener noreferrer">Hugo</a> & <a class="hover:underline hover:decoration-primary-400 hover:text-primary-500" href=https://blowfish.page/ target=_blank rel="noopener noreferrer">Blowfish</a>
+</p>
 </div>
-<footer class=entry-footer><span title="2023-04-08 12:13:11 +0200 +0200">April 8, 2023</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;Rok</footer>
-<a class=entry-link aria-label="post link to Hello World" href=https://rkcpn.github.io/posts/hello-world/></a>
-</article>
-</main>
-<footer class=footer>
-<span>&copy; 2023 <a href=https://rkcpn.github.io>rkcpn</a></span>
-<span>
-Powered by
-<a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://github.com/adityatelange/hugo-PaperMod/ rel=noopener target=_blank>PaperMod</a>
-</span>
+<script>mediumZoom(document.querySelectorAll("img:not(.nozoom)"),{margin:24,background:'rgba(0,0,0,0.5)',scrollOffset:0})</script>
+<script type=text/javascript src=/blowfish/js/process.min.e7c3599dbb1cedb20b622602837cde52ffd76433ccf3544defb2f071860d81580f68eb150111f9b7fabdeda3aacb803d34d2d8a0a0a9f10410e9d20b98b1f4a1.js integrity="sha512-58NZnbsc7bILYiYCg3zeUv/XZDPM81RN77LwcYYNgVgPaOsVARH5t/q97aOqy4A9NNLYoKCp8QQQ6dILmLH0oQ=="></script>
 </footer>
-<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
-</a>
-<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
-<script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
-<script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
+</div>
 </body>
 </html>
